--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Montserrat&display=swap');
+
+body{
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p,ul,button{
+  font-family: 'Comfortaa', cursive;
+}
+
+h1,h2{
+  font-family: 'Montserrat', sans-serif;
+}
+
+a{
+  text-decoration: none;
+  color: white;
+  display: inline-block;
+}
+ul{
+  list-style: none;
+}
+img{
+  width: 100%;
+}
+input, textarea{
+  display: block;
+  margin: 15px 0px;
+  width: 80%;
+  padding: 10px;
+  border-radius: 6px;
+  border: 2px solid #ffe284;
 }
